[project]
name = "prodx"
version = "0.1.0"
description = "Basic negative-binomial regression for single-cell differential expression."
authors = [{ name = "Daniel C. Jones" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anndata (>=0.11.3,<0.12.0)",
    "jax (==0.5.0)",
    "numpyro (>=0.17.0,<0.18.0)",
    "numpy (>=2.1.0,<3.0.0)",
    "patsy (>=1.0.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
